# PyMesh

./: .gitignore  .gitmodules  .hgignore  .travis.yml  CMakeLists.txt  Dockerfile  MANIFEST.in  Options.cmake  README  README.html  README.md  Settings.cmake  circle.yml  converter.py  cube.gltf  cube2.ply  readthedocs.yml  setup.py
examples/: CMakeLists.txt
examples/tools/: CMakeLists.txt
python/: CMakeLists.txt  ConvexHull.cpp  MeshWriter.cpp  PyAABB.cpp  PyBoolean.cpp  PyCGAL.cpp  PyCellPartition.cpp  PyCompression.cpp  PyConvexHull.cpp  PyDMAT.cpp  PyFEM.cpp  PyGeogram.cpp  PyHashGrid.cpp  PyIGL.cpp  PyMesh.cpp  PyMeshFactory.cpp  PyMeshUtils.cpp  PyMeshWriter.cpp  PyMinkowskiSum.cpp  PyOuterHull.cpp  PyPredicates.cpp  PySelfIntersectionResolver.cpp  PySkeletonExtraction.cpp  PySparseSolver.cpp  PyStatistics.cpp  PyTetgen.cpp  PyTetrahedralization.cpp  PyTriangle.cpp  PyTriangulation.cpp  PyVoxelGrid.cpp  PyWindingNumber.cpp  PyWires.cpp  module.cpp  requirements.txt
python/pymesh/: Arrangement2.py  Assembler.py  Boundary.py  CSGTree.py  HarmonicSolver.py  HashGrid.py  Mesh.py  PyMeshSetting.py  Solver.py  SparseSolver.py  TestCase.py  VoxelGrid.py  __init__.py  aabb_tree.py  boolean.py  boolean_unsupported.py  cell_partition.py  compression.py  convex_hull.py  cut_to_disk.py  exact_arithmetic.py  igl_utils.py  map_attributes.py  material.py  matrixio.py  mesh_io.py  meshio.py  minkowski_sum.py  outerhull.py  predicates.py  save_svg.py  selfintersection.py  skeleton.py  slice_mesh.py  snap_rounding.py  statistics.py  straight_skeleton.py  submesh.py  tetgen.py  tetrahedralize.py  (+4 more)
src/: CMakeLists.txt  Design.dia  EdgeLengthAttribute.cpp  EigenTypedef.h  EigenTypedef.i  Environment.h  Exception.h  ExceptionConverter.i  FaceAreaAttribute.cpp  FaceAreaAttribute.h  FaceNormalAttribute.cpp  HashGrid.cpp  HashGrid.h  HashGrid.i  HashKey.h  IOUtils.cpp  IOUtils.h  MSHParser.cpp  MSHParser.h  MSHWriter.cpp  MSHWriter.h  Mesh.cpp  Mesh.h  Mesh.i  MeshAttribute.h  MeshAttributeFactory.cpp  MeshAttributeFactory.h  MeshAttributes.cpp  MeshAttributes.h  MeshConnectivity.cpp  MeshConnectivity.h  MeshFactory.cpp  MeshFactory.h  MeshFactory.i  MeshGeometry.h  MeshParser.cpp  MeshParser.h  MeshWriter.cpp  MeshWriter.h  MeshWriter.i  (+27 more)
src/Attributes/: EdgeDihedralAngleAttribute.cpp  EdgeDihedralAngleAttribute.h  EdgeLengthAttribute.cpp  EdgeLengthAttribute.h  EdgeSquaredLengthAttribute.cpp  EdgeSquaredLengthAttribute.h  FaceAreaAttribute.cpp  FaceAreaAttribute.h  FaceAspectRatioAttribute.cpp  FaceAspectRatioAttribute.h  FaceCentroidAttribute.cpp  FaceCentroidAttribute.h  FaceCircumCenterAttribute.cpp  FaceCircumCenterAttribute.h  FaceCircumRadiusAttribute.cpp  FaceCircumRadiusAttribute.h  FaceEdgeRatioAttribute.cpp  FaceEdgeRatioAttribute.h  FaceFrameAttribute.cpp  FaceFrameAttribute.h  FaceIncircleCenterAttribute.cpp  FaceIncircleCenterAttribute.h  FaceIncircleRadiusAttribute.cpp  FaceIncircleRadiusAttribute.h  FaceIndexAttribute.cpp  FaceIndexAttribute.h  FaceNormalAttribute.cpp  FaceNormalAttribute.h  FaceRadiusEdgeRatioAttribute.cpp  FaceRadiusEdgeRatioAttribute.h  FaceVoronoiAreaAttribute.cpp  FaceVoronoiAreaAttribute.h  MeshAttribute.h  MeshAttributeFactory.cpp  MeshAttributeFactory.h  MeshAttributes.cpp  MeshAttributes.h  VertexAreaAttribute.cpp  VertexAreaAttribute.h  VertexDihedralAngleAttribute.cpp  (+39 more)
src/Connectivity/: MeshConnectivity.cpp  MeshConnectivity.h
src/Core/: EigenTypedef.h  EigenTypedef.i  Exception.h  ExceptionConverter.i  debug.h
src/Geometry/: MeshGeometry.cpp  MeshGeometry.h
src/IO/: IOUtils.cpp  IOUtils.h  MEDITParser.cpp  MEDITParser.h  MEDITWriter.cpp  MEDITWriter.h  MSHParser.cpp  MSHParser.h  MSHWriter.cpp  MSHWriter.h  MeshParser.cpp  MeshParser.h  MeshWriter.cpp  MeshWriter.h  MeshWriter.i  MshLoader.cpp  MshLoader.h  MshLoader.i  MshSaver.cpp  MshSaver.h  MshSaver.i  NodeParser.cpp  NodeParser.h  NodeWriter.cpp  NodeWriter.h  OBJParser.cpp  OBJParser.h  OBJWriter.cpp  OBJWriter.h  OBJWriter.i  OFFParser.cpp  OFFParser.h  OFFWriter.cpp  OFFWriter.h  PLYParser.cpp  PLYParser.h  PLYWriter.cpp  PLYWriter.h  POLYParser.cpp  POLYParser.h  (+9 more)
src/Math/: MatrixUtils.h  MatrixUtils.inl  ZSparseMatrix.cpp  ZSparseMatrix.h  ZSparseMatrix.i
src/Misc/: Environment.h  HashGrid.cpp  HashGrid.h  HashGrid.i  HashGridImplementation.h  HashGridImplementation.inl  HashKey.h  HashMapTrait.h  MatrixIO.h  Multiplet.h  MultipletMap.h  Timer.h  TriBox2D.h  Triplet.h  TripletMap.h  numpy.hpp  timing.h  tribox3.h
src/design/: Design.dia
src/old/: MeshFactory.cpp  MeshFactory.h  OBJMesh.cpp  OBJMesh.h
tests/: CMakeLists.txt  CopyTest.h  CopyTest.i  TestBase.h  example.cpp  example.py  gtest_test.h  unit_test_driver.cpp
tests/data/: ball.msh  clipper_input_1.ply  clipper_input_2.ply  cube.msh  cube.off  cube.stl  e2.npy  empty.mesh  empty.msh  empty.ply  empty.stl  hex.msh  hex_s1.msh  tet.mesh  tet.msh
tests/learning_tests/: CMakeLists.txt  check_opencl.c  opencl_arctan2_test.h  opencl_multiply_test.h  opencl_race_condition.h  opencl_vector_op_test.h  opencl_vector_test.h  unit_test_driver.cpp
tests/old/: copy_mesh.py  example.cpp
tests/src/: CMakeLists.txt  HashGridTest.h  MeshFactoryTest.h  MeshTest.h  MeshTest.inl  OBJParserTest.h  TripletTest.h  unit_test_driver.cpp
tests/tools/: CMakeLists.txt
tools/: CMakeLists.txt  CopyTest.cpp  PyMeshTools.i  WindingNumber.cpp  WindingNumber.h  WindingNumber.i
tools/Assembler/: CMakeLists.txt  FEAssembler.cpp  FEAssembler.h  FEAssembler.i  PyAssembler.i
tools/BVH/: BVHEngine.cpp  BVHEngine.h  CMakeLists.txt
tools/Boolean/: BooleanEngine.cpp  BooleanEngine.h  BooleanEngine.i  CMakeLists.txt  CSGTree.cpp  CSGTree.h  CSGTree.i  OuterHullEngine.cpp  OuterHullEngine.h  OuterHullEngine.i  PyBoolean.i  SelfIntersectionResolver.cpp  SelfIntersectionResolver.h  SelfIntersectionResolver.i
tools/CGAL/: AABBTree.h  AABBTree.i  AABBTree2.h  Arrangement2.cpp  Arrangement2.h  BoundingBox.cpp  BoundingBox.h  BoundingBox.i  CGAL_includes.h  CMakeLists.txt  CreateSkeleton2.cpp  CreateSkeleton2.h  PyCGAL.i  SelfIntersection.cpp  (+6 more)
(+1278 files in other folders)
