CMAKE_MINIMUM_REQUIRED(VERSION 3.11.0)
set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE "${CMAKE_COMMAND} -E time")

PROJECT(PyMesh)

INCLUDE(Settings.cmake)

# Process code in each subdirectories
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(python)

ADD_SUBDIRECTORY(tests EXCLUDE_FROM_ALL)
#ADD_SUBDIRECTORY(examples EXCLUDE_FROM_ALL)
