PYBIND11_ADD_MODULE(PyMesh module.cpp
    PyAABB.cpp
    PyBoolean.cpp
    PyCellPartition.cpp
    PyCGAL.cpp
    PyCompression.cpp
    PyConvexHull.cpp
    PyDMAT.cpp
    PyFEM.cpp
    PyGeogram.cpp
    PyHashGrid.cpp
    PyIGL.cpp
    PyMeshUtils.cpp
    PyMesh.cpp
    PyMeshFactory.cpp
    PyMeshWriter.cpp
    PyOuterHull.cpp
    PyPredicates.cpp
    PySelfIntersectionResolver.cpp
    PySparseSolver.cpp
    PyTetgen.cpp
    PyTetrahedralization.cpp
    PyTriangle.cpp
    PyTriangulation.cpp
    PyMinkowskiSum.cpp
    PyVoxelGrid.cpp
    PyWindingNumber.cpp
    PyWires.cpp)
TARGET_LINK_LIBRARIES(PyMesh PRIVATE
    Mesh
    lib_Assembler
    lib_MeshUtils
    lib_CGAL
    lib_Geogram
    lib_IGL
    lib_Predicates
    lib_Compression
    lib_ConvexHull
    lib_SelfIntersection
    lib_Boolean
    lib_BVH
    lib_OuterHull
    lib_SparseSolver
    lib_Tetrahedralization
    lib_Triangle
    lib_Triangulation
    lib_WindingNumber
    lib_Wires)
TARGET_INCLUDE_DIRECTORIES(PyMesh SYSTEM PRIVATE
    ${PROJECT_SOURCE_DIR}/src
    ${PROJECT_SOURCE_DIR}/tools
    ${EIGEN_INCLUDE_DIRS}
    ${EIGEN_INCLUDE_DIRS}/unsupported
    ${LIBIGL_INCLUDE_DIRS})
