PYBIND11_ADD_MODULE(PyMesh module.cpp
    PyAABB.cpp
    PyBoolean.cpp
    PyCellPartition.cpp
    PyCGAL.cpp
    PyCompression.cpp
    PyConvexHull.cpp
    PyDMAT.cpp
    PyFEM.cpp
    PyGeogram.cpp
    PyHashGrid.cpp
    PyIGL.cpp
    PyMeshUtils.cpp
    PyMesh.cpp
    PyMeshFactory.cpp
    PyMeshWriter.cpp
    PyOuterHull.cpp
    PyPredicates.cpp
    PySelfIntersectionResolver.cpp
    PySkeletonExtraction.cpp
    PySparseSolver.cpp
    PyTetgen.cpp
    PyTetrahedralization.cpp
    PyTriangle.cpp
    PyTriangulation.cpp
    PyMinkowskiSum.cpp
    PyVoxelGrid.cpp
    PyWindingNumber.cpp
    PyWires.cpp)
TARGET_LINK_LIBRARIES(PyMesh PRIVATE
    Mesh
    PyMesh::Tools::Assembler
    PyMesh::Tools::MeshUtils
    PyMesh::Tools::CGAL
    PyMesh::Tools::Geogram
    PyMesh::Tools::IGL
    PyMesh::Tools::Predicates
    PyMesh::Tools::Compression
    PyMesh::Tools::ConvexHull
    PyMesh::Tools::SelfIntersection
    PyMesh::Tools::SkeletonExtraction
    PyMesh::Tools::Boolean
    PyMesh::Tools::BVH
    PyMesh::Tools::OuterHull
    PyMesh::Tools::SparseSolver
    PyMesh::Tools::TetGen
    PyMesh::Tools::Tetrahedralization
    PyMesh::Tools::Triangle
    PyMesh::Tools::Triangulation
    PyMesh::Tools::WindingNumber
    PyMesh::Tools::Wires)
TARGET_INCLUDE_DIRECTORIES(PyMesh SYSTEM PRIVATE
    ${PROJECT_SOURCE_DIR}/src
    ${PROJECT_SOURCE_DIR}/tools
    ${EIGEN_INCLUDE_DIRS}
    ${EIGEN_INCLUDE_DIRS}/unsupported
    ${LIBIGL_INCLUDE_DIRS})
