ADD_LIBRARY(PyMesh::Tools INTERFACE IMPORTED)
TARGET_INCLUDE_DIRECTORIES(PyMesh::Tools
    INTERFACE
        ${CMAKE_CURRENT_SOURCE_DIR}
)

ADD_SUBDIRECTORY(Predicates)
ADD_SUBDIRECTORY(MeshUtils)
ADD_SUBDIRECTORY(Geogram)
ADD_SUBDIRECTORY(Assembler)
ADD_SUBDIRECTORY(CGAL)
ADD_SUBDIRECTORY(IGL)
ADD_SUBDIRECTORY(TetGen)
ADD_SUBDIRECTORY(Triangle)
ADD_SUBDIRECTORY(ConvexHull)
ADD_SUBDIRECTORY(Boolean)
ADD_SUBDIRECTORY(SelfIntersection)
ADD_SUBDIRECTORY(SkeletonExtraction)
ADD_SUBDIRECTORY(OuterHull)
ADD_SUBDIRECTORY(WindingNumber)
ADD_SUBDIRECTORY(Triangulation)
ADD_SUBDIRECTORY(BVH)
ADD_SUBDIRECTORY(Compression)
ADD_SUBDIRECTORY(Tetrahedralization)
ADD_SUBDIRECTORY(SparseSolver)
ADD_SUBDIRECTORY(Wires)

# Depreciated tools
#ADD_SUBDIRECTORY(OpenCL)
#ADD_SUBDIRECTORY(EigenUtils)
#ADD_SUBDIRECTORY(Envelope)

