# General lib locations
LINK_DIRECTORIES(/opt/local/lib)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/tools)

FILE(GLOB SRC_FILES *.cpp)
FILE(GLOB INC_FILES *.h)

ADD_SUBDIRECTORY(Assemblers)
ADD_SUBDIRECTORY(Elements)
ADD_SUBDIRECTORY(FESetting)
ADD_SUBDIRECTORY(Math)
ADD_SUBDIRECTORY(Materials)
ADD_SUBDIRECTORY(Mesh)
ADD_SUBDIRECTORY(ShapeFunctions)

ADD_LIBRARY(lib_assembler SHARED ${SRC_FILES} ${INC_FILES})
TARGET_LINK_LIBRARIES(lib_assembler Mesh lib_MeshUtils)
SET_TARGET_PROPERTIES(lib_assembler PROPERTIES OUTPUT_NAME "assembler")

ADD_CUSTOM_TARGET(assembler DEPENDS lib_assembler)
