# Include this directory
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# Enumerate source files
FILE(GLOB SRC_FILES *.cpp *.inl)
FILE(GLOB INC_FILES *.h)

SET(DEPENDENT_LIBS "")

# Cork
IF (CORK_FOUND AND GMP_FOUND)
    INCLUDE_DIRECTORIES(${CORK_INCLUDE_DIR})
    INCLUDE_DIRECTORIES(${GMP_INCLUDE_DIR})
    LIST(APPEND DEPENDENT_LIBS ${CORK_LIBRARIES})
    LIST(APPEND DEPENDENT_LIBS ${GMP_LIBRARIES})
    ADD_DEFINITIONS(-DWITH_CORK)
    ADD_SUBDIRECTORY(Cork)
ELSEIF (NOT CORK_FOUND)
    MESSAGE(WARNING "Cork is missing.  Cork CSG support is skipped")
ELSEIF (NOT GMP_FOUND)
    MESSAGE(WARNING "GMP is missing.  Cork CSG support is skipped")
ENDIF (CORK_FOUND AND GMP_FOUND)

# Clipper
IF (CLIPPER_FOUND)
    INCLUDE_DIRECTORIES(${CLIPPER_INCLUDE_DIR})
    LIST(APPEND DEPENDENT_LIBS ${CLIPPER_LIBRARIES})
    ADD_DEFINITIONS(-DWITH_CLIPPER)
    ADD_SUBDIRECTORY(Clipper)
ELSE(CLIPPER_FOUND)
    MESSAGE(WARNING "Clipper is missing. Clipper CSG support is skipped")
ENDIF(CLIPPER_FOUND)

ADD_LIBRARY(lib_csg SHARED ${SRC_FILES} ${INC_FILES})
SET_TARGET_PROPERTIES(lib_csg PROPERTIES OUTPUT_NAME "csg")
TARGET_LINK_LIBRARIES(lib_csg Mesh lib_MeshUtils lib_triangle_wrapper ${DEPENDENT_LIBS})

set(SWG_FILES PyCSG.i)

# Generate wrapper for python
SET_SOURCE_FILES_PROPERTIES(${SWG_FILES} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${SWG_FILES} PROPERTIES CMAKE_SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(PyCSG python ${SWG_FILES} ${INC_FILES})
SWIG_LINK_LIBRARIES(PyCSG ${PYTHON_LIBRARIES} Mesh lib_MeshUtils lib_csg
    ${DEPENDENT_LIBS})

# Boudle lib, swig wrapper into a single target.
# Usage: make csg
ADD_CUSTOM_TARGET(csg DEPENDS lib_csg _PyCSG)
